[package]
name = "bevy_mod_debugdump"
version = "0.8.0"
repository = "https://github.com/jakobhellermann/bevy_mod_debugdump"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Visualization tools for bevy"
keywords = ["bevy", "schedule", "visual", "render", "graph"]
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2021"
exclude = ["docs/*"]

[features]
default = ["render_graph"]
render_graph = []

[dependencies]
bevy_ecs = { git = "https://github.com/0x182d4454fb211940/bevy.git", branch = "pointer-api-rough" }
bevy_app = { git = "https://github.com/0x182d4454fb211940/bevy.git", branch = "pointer-api-rough" }
bevy_utils = { git = "https://github.com/0x182d4454fb211940/bevy.git", branch = "pointer-api-rough" }
bevy_render = { git = "https://github.com/0x182d4454fb211940/bevy.git", branch = "pointer-api-rough" }
pretty-type-name = "1.0"
petgraph = "0.6"
once_cell = "1.17"

[dev-dependencies]
bevy = "0.11"

[[example]]
name = "print_render_graph"
required-features = ["render_graph"]
